# mimicReadmission

./: .gitignore  README.md  pyproject.toml
mimicreadmission/: .gitattributes  buildGraph.py  preProcess.py
mimicreadmission/emb-complEx/: runComplEx-OpenKE.py
mimicreadmission/emb-distMult/: runDistmult-OpenKE.py
mimicreadmission/emb-simpleE/: runSimplE-OpenKE.py
mimicreadmission/emb-transE/: runTransE-OpenKE.py
mimicreadmission/rdf2vec/embedScripts/: buildGraph.py  runEmbedding.py  runRDF2VEC.py  runRdf2Vec.py
mimicreadmission/resources/: buildGraph.py  preProcess.py  processFiles.py
mimicreadmission/simpleE/: runSimplE-OpenKE.py
mimicreadmission/transE/: preProcess.py  processFiles.py  runTransE-OpenKE.py
